--- a/index.html
+++ b/index.html
@@ -25,10 +25,18 @@
             <a class="navbar-brand" href="#page-top"><img src="assets/img/ARSIRUX-12.png" style="height: 55px;"
                     alt="..." /></a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarResponsive"
-                aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
+                aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation"
+                onclick="toggleMenu()">
                 Menu
-                <i class="fas fa-bars ms-1"></i>
+                <svg class="svg-inline--fa fa-bars ms-1" aria-hidden="true" focusable="false" data-prefix="fas"
+                    data-icon="bars" role="img" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 448 512"
+                    data-fa-i2svg="">
+                    <path fill="currentColor"
+                        d="M0 96C0 78.3 14.3 64 32 64H416c17.7 0 32 14.3 32 32s-14.3 32-32 32H32C14.3 128 0 113.7 0 96zM0 256c0-17.7 14.3-32 32-32H416c17.7 0 32 14.3 32 32s-14.3 32-32 32H32c-17.7 0-32-14.3-32-32zM448 416c0 17.7-14.3 32-32 32H32c-17.7 0-32-14.3-32-32s14.3-32 32-32H416c17.7 0 32 14.3 32 32z">
+                    </path>
+                </svg><!-- <i class="fas fa-bars ms-1"></i> Font Awesome fontawesome.com -->
             </button>
+
             <div class="collapse navbar-collapse" id="navbarResponsive">
                 <ul class="navbar-nav text-uppercase ms-auto py-4 py-lg-0">
                     <li class="nav-item"><a class="nav-link" href="#services">services</a></li>
@@ -36,6 +44,11 @@
                     <li class="nav-item"><a class="nav-link" href="#about">about</a></li>
                     <li class="nav-item"><a class="nav-link" href="#team">team</a></li>
                     <li class="nav-item"><a class="nav-link" href="#contact">contact</a></li>
+                    <div class="idioma">
+                        <img src="/assets/img/logos/en.svg" alt="" class="logos">
+                        <input type="checkbox" class="checkes">
+                        <img src="/assets/img/logos/es.svg" alt="" class="logos">
+                    </div>
                 </ul>
             </div>
         </div>
@@ -289,9 +302,8 @@
             </div>
             <div class="row">
                 <div class="col-lg-8 mx-auto text-center">
-                    <p class="large text-muted">Teamwork enriches us as professionals, giving us expectations we might
-                        never have thought of.
-                        expectations that we might never have thought of.</p>
+                    <p class="large text-muted">Teamwork enriches us as professionals, giving us expectations that we
+                        might never have thought of.</p>
                 </div>
             </div>
         </div>
@@ -630,10 +642,6 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"></script>
     <!-- Core theme JS-->
     <script src="js/scripts.js"></script>
-    <!-- * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * *-->
-    <!-- * *                               SB Forms JS                               * *-->
-    <!-- * * Activate your form at https://startbootstrap.com/solution/contact-forms * *-->
-    <!-- * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * *-->
     <script src="https://cdn.startbootstrap.com/sb-forms-latest.js"></script>
 </body>
 
