--- a/es/index.html
+++ b/es/index.html
@@ -37,9 +37,9 @@
                     <li class="nav-item"><a class="nav-link" href="#team">Equipo</a></li>
                     <li class="nav-item"><a class="nav-link" href="#contact">Contactos</a></li>
                     <div class="idioma">
-                        <img src="/assets/img/logos/en.svg" alt="" class="logos">
+                        <img src="/assets/img/logos/en.png" alt="" class="logos">
                         <input type="checkbox" class="checkes" checked>
-                        <img src="/assets/img/logos/es.svg" alt="" class="logos">
+                        <img src="/assets/img/logos/es.png" alt="" class="logos">
                     </div>
                 </ul>
             </div>
