--- a/index.html
+++ b/index.html
@@ -45,9 +45,9 @@
                     <li class="nav-item"><a class="nav-link" href="#team">team</a></li>
                     <li class="nav-item"><a class="nav-link" href="#contact">contact</a></li>
                     <div class="idioma">
-                        <img src="/assets/img/logos/en.svg" alt="" class="logos">
+                        <img src="/assets/img/logos/en.png" alt="" class="logos">
                         <input type="checkbox" class="checkes">
-                        <img src="/assets/img/logos/es.svg" alt="" class="logos">
+                        <img src="/assets/img/logos/es.png" alt="" class="logos">
                     </div>
                 </ul>
             </div>
@@ -642,7 +642,8 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"></script>
     <!-- Core theme JS-->
     <script src="js/scripts.js"></script>
-    <script src="https://cdn.startbootstrap.com/sb-forms-latest.js"></script>
+    <!-- <script src="https://cdn.startbootstrap.com/sb-forms-latest.js"></script> -->
+    
 </body>
 
 </html>
