--- a/es/index.html
+++ b/es/index.html
@@ -27,8 +27,15 @@
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarResponsive"
                 aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
                 Menu
-                <i class="fas fa-bars ms-1"></i>
+                <svg class="svg-inline--fa fa-bars ms-1" aria-hidden="true" focusable="false" data-prefix="fas"
+                    data-icon="bars" role="img" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 448 512"
+                    data-fa-i2svg="">
+                    <path fill="currentColor"
+                        d="M0 96C0 78.3 14.3 64 32 64H416c17.7 0 32 14.3 32 32s-14.3 32-32 32H32C14.3 128 0 113.7 0 96zM0 256c0-17.7 14.3-32 32-32H416c17.7 0 32 14.3 32 32s-14.3 32-32 32H32c-17.7 0-32-14.3-32-32zM448 416c0 17.7-14.3 32-32 32H32c-17.7 0-32-14.3-32-32s14.3-32 32-32H416c17.7 0 32 14.3 32 32z">
+                    </path>
+                </svg><!-- <i class="fas fa-bars ms-1"></i> Font Awesome fontawesome.com -->
             </button>
+
             <div class="collapse navbar-collapse" id="navbarResponsive">
                 <ul class="navbar-nav text-uppercase ms-auto py-4 py-lg-0">
                     <li class="nav-item"><a class="nav-link" href="#services">Servicios</a></li>
@@ -54,26 +61,33 @@
         <div class="container">
             <div class="text-center">
                 <h2 class="section-heading text-uppercase">Servicios</h2>
-                <h3 class="section-subheading text-muted">Estamos orgullosos tanto de la calidad de nuestro trabajo como de la experiencia personalizada que brindamos a cada cliente. De principio a fin, estamos comprometidos a brindar un servicio excepcional que supere sus expectativas. Contáctenos hoy y convierta sus sueños de construcción en realidad.</h3>
+                <h3 class="section-subheading text-muted">Estamos orgullosos tanto de la calidad de nuestro trabajo como
+                    de la experiencia personalizada que brindamos a cada cliente. De principio a fin, estamos
+                    comprometidos a brindar un servicio excepcional que supere sus expectativas. Contáctenos hoy y
+                    convierta sus sueños de construcción en realidad.</h3>
             </div>
             <div class="row text-center">
                 <div class="col-md-4">
                     <img src="../assets/img/logos/planos.png" alt="" height="150px"
                         style="border-radius: 50% !important; border: 0.5rem solid rgba(0, 0, 0, 0.1);">
                     <h4 class="my-3">Diseño De Planos</h4>
-                    <p class="text-muted">Desde la conceptualización inicial hasta los planos detallados, trabajamos con usted para crear diseños que se adapten a sus necesidades y requisitos específicos.</p>
+                    <p class="text-muted">Desde la conceptualización inicial hasta los planos detallados, trabajamos con
+                        usted para crear diseños que se adapten a sus necesidades y requisitos específicos.</p>
                 </div>
                 <div class="col-md-4">
                     <img src="../assets/img/logos/construccion.png" alt="" height="150px"
                         style="border-radius: 50% !important; border: 0.5rem solid rgba(0, 0, 0, 0.1);">
                     <h4 class="my-3">Construccion Civil</h4>
-                    <p class="text-muted">Nuestro equipo de constructores altamente calificados se encarga de realizar la construcción de acuerdo con los más altos estándares de calidad y seguridad.</p>
+                    <p class="text-muted">Nuestro equipo de constructores altamente calificados se encarga de realizar
+                        la construcción de acuerdo con los más altos estándares de calidad y seguridad.</p>
                 </div>
                 <div class="col-md-4">
                     <img src="../assets/img/logos/remodelacion.png" alt="" height="150px"
                         style="border-radius: 50% !important; border: 0.5rem solid rgba(0, 0, 0, 0.1);">
                     <h4 class="my-3">Remodelacion General</h4>
-                    <p class="text-muted">Transformamos espacios existentes para potenciar su funcionalidad, estética y valor. Ya sea una renovación completa o una actualización parcial, estamos preparados para hacer realidad su visión.</p>
+                    <p class="text-muted">Transformamos espacios existentes para potenciar su funcionalidad, estética y
+                        valor. Ya sea una renovación completa o una actualización parcial, estamos preparados para hacer
+                        realidad su visión.</p>
                 </div>
             </div>
         </div>
@@ -184,7 +198,14 @@
         <div class="container">
             <div class="text-center">
                 <h2 class="section-heading text-uppercase">Nosotros</h2>
-                <h3 class="section-subheading text-muted">En Arsirux SAS brindamos servicios de ingeniería que van desde el diseño de infraestructura hasta la construcción y remodelación. Ofrecer a nuestros clientes proyectos de alta calidad que satisfagan sus necesidades específicas optimizando la gestión de procesos y precios asequibles. Nuestro enfoque en la calidad, seguridad, compromiso y mejora continua será utilizado para cumplir nuestros objetivos para el año en curso. Por ello, la dirección ha decidido implementar controles basados ​​en la innovación y el desarrollo de nuevas tecnologías, siguiendo los estándares de calidad ISO 9001 y se compromete a cumplir con los requisitos aplicables para lograr la mejora continua del sistema de gestión de calidad.
+                <h3 class="section-subheading text-muted">En Arsirux SAS brindamos servicios de ingeniería que van desde
+                    el diseño de infraestructura hasta la construcción y remodelación. Ofrecer a nuestros clientes
+                    proyectos de alta calidad que satisfagan sus necesidades específicas optimizando la gestión de
+                    procesos y precios asequibles. Nuestro enfoque en la calidad, seguridad, compromiso y mejora
+                    continua será utilizado para cumplir nuestros objetivos para el año en curso. Por ello, la dirección
+                    ha decidido implementar controles basados ​​en la innovación y el desarrollo de nuevas tecnologías,
+                    siguiendo los estándares de calidad ISO 9001 y se compromete a cumplir con los requisitos aplicables
+                    para lograr la mejora continua del sistema de gestión de calidad.
                 </h3>
             </div>
             <ul class="timeline">
@@ -196,7 +217,11 @@
                             <h4 class="subheading">Mision</h4>
                         </div>
                         <div class="timeline-body">
-                            <p class="text-muted">Somos una empresa constructora que tiene como objetivo cultivar la excelencia en el desarrollo de infraestructura tanto para el sector público como privado, ofreciendo soluciones de alta calidad con eficiencia ética y profesional que mejoran y promueven el desarrollo económico, al mismo tiempo que satisfacen las necesidades de nuestros clientes.</p>
+                            <p class="text-muted">Somos una empresa constructora que tiene como objetivo cultivar la
+                                excelencia en el desarrollo de infraestructura tanto para el sector público como
+                                privado, ofreciendo soluciones de alta calidad con eficiencia ética y profesional que
+                                mejoran y promueven el desarrollo económico, al mismo tiempo que satisfacen las
+                                necesidades de nuestros clientes.</p>
                         </div>
                     </div>
                 </li>
@@ -208,7 +233,11 @@
                             <h4 class="subheading">Vision</h4>
                         </div>
                         <div class="timeline-body">
-                            <p class="text-muted">Estar a la vanguardia de la industria de la construcción, visualizándonos como una empresa constructora con un compromiso inquebrantable con la innovación y la industrialización, ejecutando proyectos de alta calidad y mejorando continuamente nuestros servicios de ingeniería para el beneficio de la comunidad y la transformación de la industria.</p>
+                            <p class="text-muted">Estar a la vanguardia de la industria de la construcción,
+                                visualizándonos como una empresa constructora con un compromiso inquebrantable con la
+                                innovación y la industrialización, ejecutando proyectos de alta calidad y mejorando
+                                continuamente nuestros servicios de ingeniería para el beneficio de la comunidad y la
+                                transformación de la industria.</p>
                         </div>
                     </div>
                 </li>
@@ -273,7 +302,8 @@
             </div>
             <div class="row">
                 <div class="col-lg-8 mx-auto text-center">
-                    <p class="large text-muted">El trabajo en equipo nos enriquece como profesionales, dándonos expectativas que quizá nunca habríamos pensado.</p>
+                    <p class="large text-muted">El trabajo en equipo nos enriquece como profesionales, dándonos
+                        expectativas que quizá nunca habríamos pensado.</p>
                 </div>
             </div>
         </div>
@@ -296,8 +326,8 @@
                         </div>
                         <div class="form-group">
                             <!-- Email address input-->
-                            <input class="form-control" id="email" name="email" type="email" placeholder="Su Correo Electronico *"
-                                data-sb-validations="required,email" />
+                            <input class="form-control" id="email" name="email" type="email"
+                                placeholder="Su Correo Electronico *" data-sb-validations="required,email" />
                             <div class="invalid-feedback" data-sb-feedback="email:required">An email is required.</div>
                             <div class="invalid-feedback" data-sb-feedback="email:email">Email is not valid.</div>
                         </div>
@@ -612,7 +642,6 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"></script>
     <!-- Core theme JS-->
     <script src="../js/scripts.js"></script>
-    <script src="https://cdn.startbootstrap.com/sb-forms-latest.js"></script>
 </body>
 
 </html>
