--- a/index.html
+++ b/index.html
@@ -25,8 +25,7 @@
             <a class="navbar-brand" href="#page-top"><img src="assets/img/ARSIRUX-12.png" style="height: 55px;"
                     alt="..." /></a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarResponsive"
-                aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation"
-                onclick="toggleMenu()">
+                aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
                 Menu
                 <svg class="svg-inline--fa fa-bars ms-1" aria-hidden="true" focusable="false" data-prefix="fas"
                     data-icon="bars" role="img" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 448 512"
@@ -643,7 +642,7 @@
     <!-- Core theme JS-->
     <script src="js/scripts.js"></script>
     <!-- <script src="https://cdn.startbootstrap.com/sb-forms-latest.js"></script> -->
-    
+
 </body>
 
 </html>
