--- a/es/index.html
+++ b/es/index.html
@@ -43,12 +43,12 @@
                     <li class="nav-item"><a class="nav-link" href="#about">Nosotros</a></li>
                     <li class="nav-item"><a class="nav-link" href="#team">Equipo</a></li>
                     <li class="nav-item"><a class="nav-link" href="#contact">Contactos</a></li>
-                    <div class="idioma">
-                        <img src="/assets/img/logos/en.png" alt="" class="logos">
-                        <input type="checkbox" class="checkes" checked>
-                        <img src="/assets/img/logos/es.png" alt="" class="logos">
-                    </div>
                 </ul>
+                <div class="idioma">
+                    <img src="..//assets/img/logos/english.png" alt="" class="logos">
+                    <input type="checkbox" class="checkes" checked>
+                    <img src="..//assets/img/logos/español.png" alt="" class="logos">
+                </div>
             </div>
         </div>
     </nav>
