--- a/index.html
+++ b/index.html
@@ -43,12 +43,12 @@
                     <li class="nav-item"><a class="nav-link" href="#about">about</a></li>
                     <li class="nav-item"><a class="nav-link" href="#team">team</a></li>
                     <li class="nav-item"><a class="nav-link" href="#contact">contact</a></li>
-                    <div class="idioma">
-                        <img src="/assets/img/logos/en.png" alt="" class="logos">
-                        <input type="checkbox" class="checkes">
-                        <img src="/assets/img/logos/es.png" alt="" class="logos">
-                    </div>
                 </ul>
+                <div class="idioma">
+                    <img src="/assets/img/logos/english.png" alt="" class="logos">
+                    <input type="checkbox" class="checkes">
+                    <img src="/assets/img/logos/español.png" alt="" class="logos">
+                </div>
             </div>
         </div>
     </nav>
