--- a/index.html
+++ b/index.html
@@ -45,9 +45,9 @@
                     <li class="nav-item"><a class="nav-link" href="#contact">contact</a></li>
                 </ul>
                 <div class="idioma">
-                    <img src="/assets/img/logos/english.png" alt="" class="logos">
+                    <img src="assets/img/logos/english.png" alt="" class="logos">
                     <input type="checkbox" class="checkes">
-                    <img src="/assets/img/logos/español.png" alt="" class="logos">
+                    <img src="assets/img/logos/español.png" alt="" class="logos">
                 </div>
             </div>
         </div>
