--- a/es/index.html
+++ b/es/index.html
@@ -379,7 +379,7 @@
     <footer class="footer py-4">
         <div class="container">
             <div class="row align-items-center">
-                <div class="col-lg-4 text-lg-start">Copyright &copy; Your Website 2024</div>
+                <div class="col-lg-4 text-lg-start">Copyright &copy; 2024 Maqyasoft. Todos los derechos reservados</div>
                 <div class="col-lg-4 my-3 my-lg-0">
                     <a class="btn btn-dark btn-social mx-2" href="https://wa.me/message/KC24EWNZOY5WM1"
                         aria-label="Whatsapp"><i class="fa-brands fa-whatsapp"></i></a>
