--- a/es/index.html
+++ b/es/index.html
@@ -195,7 +195,7 @@
                 </div>
                 <img
                   class="img-fluid"
-                  src="assets/img/portfolio/portafolio1/D5_Image_20240406_121452.png"
+                  src="../assets/img/portfolio/portafolio1/D5_Image_20240406_121452.png"
                   alt="..."
                 />
               </a>
@@ -222,7 +222,7 @@
                 </div>
                 <img
                   class="img-fluid"
-                  src="assets/img/portfolio/portafolio2/1.png"
+                  src="../assets/img/portfolio/portafolio2/1.png"
                   alt="..."
                 />
               </a>
@@ -249,7 +249,7 @@
                 </div>
                 <img
                   class="img-fluid"
-                  src="assets/img/portfolio/portafolio3/1.png"
+                  src="../assets/img/portfolio/portafolio3/1.png"
                   alt="..."
                 />
               </a>
@@ -276,7 +276,7 @@
                 </div>
                 <img
                   class="img-fluid"
-                  src="assets/img/portfolio/portafolio4/1.png"
+                  src="../assets/img/portfolio/portafolio4/1.png"
                   alt="..."
                 />
               </a>
@@ -303,7 +303,7 @@
                 </div>
                 <img
                   class="img-fluid"
-                  src="assets/img/portfolio/portafolio5/VREY1.png"
+                  src="../assets/img/portfolio/portafolio5/VREY1.png"
                   alt="..."
                 />
               </a>
@@ -330,7 +330,7 @@
                 </div>
                 <img
                   class="img-fluid"
-                  src="assets/img/portfolio/portafolio6/1.png"
+                  src="../assets/img/portfolio/portafolio6/1.png"
                   alt="..."
                 />
               </a>
@@ -357,7 +357,7 @@
                 </div>
                 <img
                   class="img-fluid"
-                  src="assets/img/portfolio/portafolio7/1.png"
+                  src="../assets/img/portfolio/portafolio7/1.png"
                   alt="..."
                 />
               </a>
@@ -384,7 +384,7 @@
                 </div>
                 <img
                   class="img-fluid"
-                  src="assets/img/portfolio/portafolio8/2.png"
+                  src="../assets/img/portfolio/portafolio8/2.png"
                   alt="..."
                 />
               </a>
@@ -411,7 +411,7 @@
                 </div>
                 <img
                   class="img-fluid"
-                  src="assets/img/portfolio/portafolio9/ejemplo.jpeg"
+                  src="../assets/img/portfolio/portafolio9/ejemplo.jpeg"
                   alt="..."
                 />
               </a>
@@ -749,7 +749,7 @@
       <div class="modal-dialog">
         <div class="modal-content">
           <div class="close-modal" data-bs-dismiss="modal">
-            <img src="assets/img/close-icon.svg" alt="Close modal" />
+            <img src="../assets/img/close-icon.svg" alt="Close modal" />
           </div>
           <div class="container">
             <div class="row justify-content-center">
@@ -761,27 +761,27 @@
                   </p>
                   <img
                     class="img-fluid d-block mx-auto"
-                    src="assets/img/portfolio/portafolio1/D5_Image_20240406_121452.png"
+                    src="../assets/img/portfolio/portafolio1/D5_Image_20240406_121452.png"
                     alt=""
                   />
                   <img
                     class="img-fluid d-block mx-auto"
-                    src="assets/img/portfolio/portafolio1/D5_Image_20240406_133117.png"
+                    src="../assets/img/portfolio/portafolio1/D5_Image_20240406_133117.png"
                     alt=""
                   />
                   <img
                     class="img-fluid d-block mx-auto"
-                    src="assets/img/portfolio/portafolio1/D5_Image_20240406_135328.png"
+                    src="../assets/img/portfolio/portafolio1/D5_Image_20240406_135328.png"
                     alt=""
                   />
                   <img
                     class="img-fluid d-block mx-auto"
-                    src="assets/img/portfolio/portafolio1/D5_Image_20240406_140031.png"
+                    src="../assets/img/portfolio/portafolio1/D5_Image_20240406_140031.png"
                     alt=""
                   />
                   <img
                     class="img-fluid d-block mx-auto"
-                    src="assets/img/portfolio/portafolio1/D5_Image_20240406_140316.png"
+                    src="../assets/img/portfolio/portafolio1/D5_Image_20240406_140316.png"
                     alt=""
                   />
                   <p>
@@ -827,7 +827,7 @@
       <div class="modal-dialog">
         <div class="modal-content">
           <div class="close-modal" data-bs-dismiss="modal">
-            <img src="assets/img/close-icon.svg" alt="Close modal" />
+            <img src="../assets/img/close-icon.svg" alt="Close modal" />
           </div>
           <div class="container">
             <div class="row justify-content-center">
@@ -842,27 +842,27 @@
                   -->
                   <img
                     class="img-fluid d-block mx-auto"
-                    src="assets/img/portfolio/portafolio2/1.png"
+                    src="../assets/img/portfolio/portafolio2/1.png"
                     alt=""
                   />
                   <img
                     class="img-fluid d-block mx-auto"
-                    src="assets/img/portfolio/portafolio2/2.png"
+                    src="../assets/img/portfolio/portafolio2/2.png"
                     alt=""
                   />
                   <img
                     class="img-fluid d-block mx-auto"
-                    src="assets/img/portfolio/portafolio2/3.png"
+                    src="../assets/img/portfolio/portafolio2/3.png"
                     alt=""
                   />
                   <img
                     class="img-fluid d-block mx-auto"
-                    src="assets/img/portfolio/portafolio2/4.png"
+                    src="../assets/img/portfolio/portafolio2/4.png"
                     alt=""
                   />
                   <img
                     class="img-fluid d-block mx-auto"
-                    src="assets/img/portfolio/portafolio2/5.png"
+                    src="../assets/img/portfolio/portafolio2/5.png"
                     alt=""
                   />
                   <!--
@@ -910,7 +910,7 @@
       <div class="modal-dialog">
         <div class="modal-content">
           <div class="close-modal" data-bs-dismiss="modal">
-            <img src="assets/img/close-icon.svg" alt="Close modal" />
+            <img src="../assets/img/close-icon.svg" alt="Close modal" />
           </div>
           <div class="container">
             <div class="row justify-content-center">
@@ -925,37 +925,37 @@
                   -->
                   <img
                     class="img-fluid d-block mx-auto"
-                    src="assets/img/portfolio/portafolio3/1.png"
+                    src="../assets/img/portfolio/portafolio3/1.png"
                     alt=""
                   />
                   <img
                     class="img-fluid d-block mx-auto"
-                    src="assets/img/portfolio/portafolio3/333.png"
+                    src="../assets/img/portfolio/portafolio3/333.png"
                     alt=""
                   />
                   <img
                     class="img-fluid d-block mx-auto"
-                    src="assets/img/portfolio/portafolio3/cocina1111.png"
+                    src="../assets/img/portfolio/portafolio3/cocina1111.png"
                     alt=""
                   />
                   <img
                     class="img-fluid d-block mx-auto"
-                    src="assets/img/portfolio/portafolio3/comedor.png"
+                    src="../assets/img/portfolio/portafolio3/comedor.png"
                     alt=""
                   />
                   <img
                     class="img-fluid d-block mx-auto"
-                    src="assets/img/portfolio/portafolio3/piscina.png"
+                    src="../assets/img/portfolio/portafolio3/piscina.png"
                     alt=""
                   />
                   <img
                     class="img-fluid d-block mx-auto"
-                    src="assets/img/portfolio/portafolio3/sala clara.png"
+                    src="../assets/img/portfolio/portafolio3/sala clara.png"
                     alt=""
                   />
                   <img
                     class="img-fluid d-block mx-auto"
-                    src="assets/img/portfolio/portafolio3/sala3.png"
+                    src="../assets/img/portfolio/portafolio3/sala3.png"
                     alt=""
                   />
                   <!--
@@ -1003,7 +1003,7 @@
       <div class="modal-dialog">
         <div class="modal-content">
           <div class="close-modal" data-bs-dismiss="modal">
-            <img src="assets/img/close-icon.svg" alt="Close modal" />
+            <img src="../assets/img/close-icon.svg" alt="Close modal" />
           </div>
           <div class="container">
             <div class="row justify-content-center">
@@ -1018,32 +1018,32 @@
                   -->
                   <img
                     class="img-fluid d-block mx-auto"
-                    src="assets/img/portfolio/portafolio4/1.png"
+                    src="../assets/img/portfolio/portafolio4/1.png"
                     alt=""
                   />
                   <img
                     class="img-fluid d-block mx-auto"
-                    src="assets/img/portfolio/portafolio4/2.png"
+                    src="../assets/img/portfolio/portafolio4/2.png"
                     alt=""
                   />
                   <img
                     class="img-fluid d-block mx-auto"
-                    src="assets/img/portfolio/portafolio4/3.png"
+                    src="../assets/img/portfolio/portafolio4/3.png"
                     alt=""
                   />
                   <img
                     class="img-fluid d-block mx-auto"
-                    src="assets/img/portfolio/portafolio4/4.png"
+                    src="../assets/img/portfolio/portafolio4/4.png"
                     alt=""
                   />
                   <img
                     class="img-fluid d-block mx-auto"
-                    src="assets/img/portfolio/portafolio4/5.png"
+                    src="../assets/img/portfolio/portafolio4/5.png"
                     alt=""
                   />
                   <img
                     class="img-fluid d-block mx-auto"
-                    src="assets/img/portfolio/portafolio4/6.png"
+                    src="../assets/img/portfolio/portafolio4/6.png"
                     alt=""
                   />
                   <!--
@@ -1091,7 +1091,7 @@
       <div class="modal-dialog">
         <div class="modal-content">
           <div class="close-modal" data-bs-dismiss="modal">
-            <img src="assets/img/close-icon.svg" alt="Close modal" />
+            <img src="../assets/img/close-icon.svg" alt="Close modal" />
           </div>
           <div class="container">
             <div class="row justify-content-center">
@@ -1106,17 +1106,17 @@
                   -->
                   <img
                     class="img-fluid d-block mx-auto"
-                    src="assets/img/portfolio/portafolio5/VREY1.png"
+                    src="../assets/img/portfolio/portafolio5/VREY1.png"
                     alt=""
                   />
                   <img
                     class="img-fluid d-block mx-auto"
-                    src="assets/img/portfolio/portafolio5/VREY2.png"
+                    src="../assets/img/portfolio/portafolio5/VREY2.png"
                     alt=""
                   />
                   <img
                     class="img-fluid d-block mx-auto"
-                    src="assets/img/portfolio/portafolio5/VREY3.png"
+                    src="../assets/img/portfolio/portafolio5/VREY3.png"
                     alt=""
                   />
                   <!--
@@ -1164,7 +1164,7 @@
       <div class="modal-dialog">
         <div class="modal-content">
           <div class="close-modal" data-bs-dismiss="modal">
-            <img src="assets/img/close-icon.svg" alt="Close modal" />
+            <img src="../assets/img/close-icon.svg" alt="Close modal" />
           </div>
           <div class="container">
             <div class="row justify-content-center">
@@ -1173,12 +1173,12 @@
                   <!-- Project details-->
                   <img
                     class="img-fluid d-block mx-auto"
-                    src="assets/img/portfolio/portafolio6/1.png"
+                    src="../assets/img/portfolio/portafolio6/1.png"
                     alt=""
                   />
                   <img
                     class="img-fluid d-block mx-auto"
-                    src="assets/img/portfolio/portafolio6/2.png"
+                    src="../assets/img/portfolio/portafolio6/2.png"
                     alt=""
                   />
                   <button
@@ -1207,7 +1207,7 @@
       <div class="modal-dialog">
         <div class="modal-content">
           <div class="close-modal" data-bs-dismiss="modal">
-            <img src="assets/img/close-icon.svg" alt="Close modal" />
+            <img src="../assets/img/close-icon.svg" alt="Close modal" />
           </div>
           <div class="container">
             <div class="row justify-content-center">
@@ -1216,27 +1216,27 @@
                   <!-- Project details-->
                   <img
                     class="img-fluid d-block mx-auto"
-                    src="assets/img/portfolio/portafolio7/1.png"
+                    src="../assets/img/portfolio/portafolio7/1.png"
                     alt="..."
                   />
                   <img
                     class="img-fluid d-block mx-auto"
-                    src="assets/img/portfolio/portafolio7/2.png"
+                    src="../assets/img/portfolio/portafolio7/2.png"
                     alt="..."
                   />
                   <img
                     class="img-fluid d-block mx-auto"
-                    src="assets/img/portfolio/portafolio7/3.png"
+                    src="../assets/img/portfolio/portafolio7/3.png"
                     alt="..."
                   />
                   <img
                     class="img-fluid d-block mx-auto"
-                    src="assets/img/portfolio/portafolio7/4.png"
+                    src="../assets/img/portfolio/portafolio7/4.png"
                     alt="..."
                   />
                   <img
                     class="img-fluid d-block mx-auto"
-                    src="assets/img/portfolio/portafolio7/5.png"
+                    src="../assets/img/portfolio/portafolio7/5.png"
                     alt="..."
                   />
                   <button
@@ -1265,7 +1265,7 @@
       <div class="modal-dialog">
         <div class="modal-content">
           <div class="close-modal" data-bs-dismiss="modal">
-            <img src="assets/img/close-icon.svg" alt="Close modal" />
+            <img src="../assets/img/close-icon.svg" alt="Close modal" />
           </div>
           <div class="container">
             <div class="row justify-content-center">
@@ -1274,12 +1274,12 @@
                   <!-- Project details-->
                   <img
                     class="img-fluid d-block mx-auto"
-                    src="assets/img/portfolio/portafolio8/1.png"
+                    src="../assets/img/portfolio/portafolio8/1.png"
                     alt="..."
                   />
                   <img
                     class="img-fluid d-block mx-auto"
-                    src="assets/img/portfolio/portafolio8/2.png"
+                    src="../assets/img/portfolio/portafolio8/2.png"
                     alt="..."
                   />
                   <button
@@ -1308,7 +1308,7 @@
       <div class="modal-dialog">
         <div class="modal-content">
           <div class="close-modal" data-bs-dismiss="modal">
-            <img src="assets/img/close-icon.svg" alt="Close modal" />
+            <img src="../assets/img/close-icon.svg" alt="Close modal" />
           </div>
           <div class="container">
             <div class="row justify-content-center">
@@ -1321,7 +1321,7 @@
                   </p>
                   <img
                     class="img-fluid d-block mx-auto"
-                    src="assets/img/portfolio/portafolio9/ejemplo.jpeg"
+                    src="../assets/img/portfolio/portafolio9/ejemplo.jpeg"
                     alt="..."
                   />
                   <p>
